RESOLVED FIXED74862
[Qt] [WK2] Fix build error due to unused variables
https://bugs.webkit.org/show_bug.cgi?id=74862
Summary [Qt] [WK2] Fix build error due to unused variables
Caio Marcelo de Oliveira Filho
Reported 2011-12-19 07:29:40 PST
[Qt] [WK2] Fix build error due to unused variables
Attachments
Patch (1.80 KB, patch)
2011-12-19 07:30 PST, Caio Marcelo de Oliveira Filho
kenneth: review+
Caio Marcelo de Oliveira Filho
Comment 1 2011-12-19 07:30:14 PST
Caio Marcelo de Oliveira Filho
Comment 2 2011-12-19 07:34:24 PST
Note You need to log in before you can comment on or make changes to this bug.