[Qt] [WK2] Fix build error due to unused variables https://bugs.webkit.org/show_bug.cgi?id=74862

Reviewed by Kenneth Rohde Christiansen.

* UIProcess/qt/QtWebPageEventHandler.cpp:
(QtWebPageEventHandler::inputMethodEvent):

Canonical link: https://commits.webkit.org/91602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103238 268f45cc-cd09-0410-ab3c-d52691b4dbfc